--- a/style.css
+++ b/style.css
@@ -1,54 +1,36 @@
-.Arial {
-font-family: Arial;
 
-} 
 
-body{
-background-color: black;}
+
+.white {
+color: white;
+font-family: Futura;
+font-size: 30px;
+}
+
+.center {
+text-align: center;
+}
+
+.default {
+ background-color:#464646;
+}
 
 .landing {
-background-image: url("./BG.jpg");
-background-repeat: no-repeat;
-background-size: 100%;
+  background-image: url(pier.jpg);
+    
+  background-position: center center;
+  
+  background-repeat: no-repeat;
+  
+ background-attachment: fixed; 
+  
+  background-size: cover;
+  
+  background-color:#464646;
+  
+
 }
 
-
-
-
-nav{
-
-margin: auto;
-margin-top: 50px;
-width: 100%;
-text-align: center;
-font-family: futura;
-font-size: 40px;
-font-weight: 100;
+.logos {
+padding-top: 150px;
 }
-
-
-a {
-padding: 50px;
-color: black
-text-decoration: none;
-color: white;
-}
-
-a:visited {
-  color: white;
-  text-decoration: none;
-}
-
-a:link {
-  text-decoration: none;
-}
-
-a:visited {
-  text-decoration: none;
-}
-
-
-
-
-
-
